--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,10 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/jade.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.13</artifactId>
+            <version>2.6.1</version>
+        </dependency>
     </dependencies>
 </project>
