--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,10 @@
             <artifactId>akka-actor_2.13</artifactId>
             <version>2.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor-typed_2.13</artifactId>
+            <version>2.6.1</version>
+        </dependency>
     </dependencies>
 </project>
